--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@docusaurus/module-type-aliases": "3.7.0",
     "@docusaurus/tsconfig": "3.7.0",
     "@docusaurus/types": "3.7.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "typescript": "~5.6.2"
   },
   "browserslist": {
