--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@docusaurus/tsconfig": "3.7.0",
     "@docusaurus/types": "3.7.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "unist-util-visit": "^5.0.0"
   },
   "browserslist": {
     "production": [
